新增菜单功能
